modificação no rodapé do site

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <footer>
         <p>
-            Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://youtube.com/cursoemvideo/" target="_blank">CursoemVideo</a>
+            Site criado por <a href="https://github.com/06Augusto-ziuL/" target="_blank">Luiz Augusto</a> para o desafio 10 do curso de HTML5 e CSS3 do <a href="https://youtube.com/cursoemvideo/" target="_blank">CursoemVideo</a>
         </p>
     </footer>
 </body>
